make-a-wish-salesforce/src/objects/VisualAntidote__Payment_Account__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal Pro</fullName>
                    <default>true</default>
                    <label>PayPal Pro</label>
                </value>
                <value>
                    <fullName>IATS</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>AuthorizeNet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Cardinal_API_Identifier__c</fullName>
        <label>Cardinal API Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Cardinal_API_Key__c</fullName>
        <label>Cardinal API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Cardinal_Merchant_ID__c</fullName>
        <label>Cardinal Merchant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Cardinal_OrgUnit_ID__c</fullName>
        <label>Cardinal OrgUnit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Cardinal_Processor_ID__c</fullName>
        <label>Cardinal Processor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Sandbox__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Password__c</fullName>
        <label>DEPRECATED</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Signature__c</fullName>
        <label>DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Username__c</fullName>
        <label>DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment Account</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>